force-app/main/default/objects/User_Story__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <length>16</length>
    <type>Text</type>
</CustomField>