force-app/main/default/objects/User_Story__c/fields/Story_Title__c.field-meta.xml
<CustomField>
    <fullName>Story_Title__c</fullName>
    <label>Story Title</label>
    <type>TextArea</type>
</CustomField>