force-app/main/default/objects/User_Story__c/fields/User_Story_Number__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Number__c</fullName>
    <label>User Story Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>